# EvoLM

./: .gitignore  .gitmodules  README.md  pyproject.toml
JudgeBench/: compute_jb_vote.py  run_judge.py
JudgeBench/utils/: judges.py
env/: local_config.sh.template  slurm_judge_server_template.sh.template
olmes/: .gitignore  README.md  pyproject.toml
olmes/oe_eval/: default_configs.py  launch.py  run_eval.py
olmes/oe_eval/configs/: alpaca_eval_gpt41_azure.yaml  models.py  task_suites.py  tasks.py
olmes/oe_eval/data/: lab_bench_tasks.py  mmlu_tasks.py  safety_tasks.py
olmes/oe_eval/dependencies/BFCL/: build_image.sh  evaluate_model.sh  evaluate_template.yaml
olmes/oe_eval/dependencies/BFCL/bfcl/constants/: model_config.py  supported_models.py
olmes/oe_eval/dependencies/BFCL/bfcl/model_handler/local_inference/: allenai.py
olmes/oe_eval/dependencies/ifeval/: instructions.py
olmes/oe_eval/dependencies/safety/: cleanup.sh  install.sh
olmes/oe_eval/external_evals/: run_external.py  run_safety.py
olmes/oe_eval/metrics/: metric.py
olmes/oe_eval/metrics/code_evals/: code_eval_routes.py  code_execution_remote.py
olmes/oe_eval/models/: eleuther_huggingface.py  eleuther_olmo_core.py  eleuther_vllm_causallms.py  litellm.py  output_processors.py
olmes/oe_eval/models/judge_models/: base_judge_model.py
olmes/oe_eval/tasks/: base_task.py  fewshot_sources.py  utils.py
olmes/oe_eval/tasks/oe_eval_tasks/: __init__.py  aime.py  alpaca_eval.py  arc.py  bbh.py  boolq.py  codex_bigcodebench.py  codex_humaneval.py  copa.py  copycolors.py  coqa_mc.py  csqa.py  drop_mc.py  gpqa.py  gsm8k.py  gsm_plus.py  hellaswag.py  jeopardy_mc.py  lab_bench.py  lbpp.py  lexam.py  livecodebench_codegeneration.py  mattbpp.py  medmcqa.py  minerva_math.py  mmlu_pro.py  multilingual_mbpp.py  multipl_e.py  naturalqs_open_mc.py  omega_500.py  ood_ifeval.py  openai_mrcr.py  openbookqa.py  piqa.py  sciq.py  siqa.py  squad.py  squad2.py  squad_mc.py  truthfulqa.py  (+1 more)
olmes/oe_eval/utilities/: datasets_wrapper.py  model_utils.py  testing_util.py  wandb_writing.py
open_instruct/: actor_manager.py  api_config.py  dataset_transformation.py  dpo_tune_cache.py  finetune.py  ground_truth_utils.py  grpo_fast.py  ppo.py  queue_types.py  reward_modeling.py  utils.py  vllm_utils.py
open_instruct/search_rewards/: longform_averaged_outcome_rewards.py  longform_finegrained_rewards_v1.py  longform_finegrained_rewards_v2.py  longform_hle_rewards.py  longform_long_rubric_rewards.py  longform_rubric_rewards.py  rlcer_rubric_utils.py  rollout_revision.py  rubric_judge_rewards.py  toy_case_multi_dataset_reward.py
open_instruct/search_rewards/data/: prepare_asearcher_short_form_data.py  prepare_gpqa_data.py  prepare_longform_with_gt_data.py  prepare_longform_with_rubrics_data.py  prepare_multi_question_dataset.py  prepare_validation_data.py
open_instruct/search_rewards/tests/: debug_citation_reward_test_answer.py  debug_entire_reward_test_answer.py  demo_longform_rewards.py  test_azure_api.py  test_case.py  test_longform_averaged_outcome_rewards.py  test_paper_rewards.py  test_run_utils.py  test_scoring.py
open_instruct/search_rewards/utils/: _direction_agreement.py  advantage_visualization.py  citation_utils.py  finegrained_utils.py  format_utils.py  judge_prompts.py  rubric_chat_templates.py  rubric_utils.py  run_utils.py  search_utils.py  span_convertion.py
open_instruct/search_utils/: massive_ds.py
scripts/: base_config.sh  configure_api.sh  launch.sh  node_accumulator.sh  rubric_data_provider.py  run_rubric_and_judge.py  slurm_ray_setup.sh  start_rubric_judge_server.sh  train_rubric_policy_joint.py  validate_rubric_arm.py
scripts/configs/: alt_training_debug.sh  alt_training_debug_h200.sh  alternating_training.sh  debug.sh  dpo_model_ladder.sh  dump_eval_prompts.sh  llama3_8b_8nodes_alt_vllm_judge.sh  llama3_8b_8nodes_singlemodel.sh  olmo3_7b_8nodes_alt_vllm_judge.sh  olmo3_7b_8nodes_singlemodel.sh  paper_output.sh  paper_output_v3.sh  qwen3_1.7b_2nodes_test.sh  qwen3_8b.sh  qwen3_8b_2nodes_test.sh  qwen3_8b_3nodes_test.sh  qwen3_8b_4nodes.sh  qwen3_8b_4nodes_test.sh  qwen3_8b_8nodes.sh  qwen3_8b_8nodes_alt_single_model_vllm_judge.sh  qwen3_8b_8nodes_alt_vllm_judge.sh  qwen3_8b_8nodes_llama3_policy.sh  qwen3_8b_8nodes_singlemodel.sh  qwen3_8b_8nodes_singlemodel_2xjudge.sh  qwen3_8b_8nodes_singlemodel_inf_engine.sh  qwen3_8b_8nodes_singlemodel_wo_judge.sh  qwen3_8b_8nodes_vllm_judge.sh  qwen3_8b_multipolicy.sh  rlvr_math.sh  rubric_judge.sh  rubric_judge_server.sh  rubric_judge_server_vllm.sh  single_model.sh
scripts/configs/alt/: alt10.sh  alt100.sh  alt2.sh  alt20.sh  alt50.sh
scripts/configs/api/: claude_sonnet.sh  gemini_flash.sh  gpt4_1.sh  gpt4o.sh
scripts/configs/combined/: mp3_mj2.sh
scripts/configs/curriculum/: README.md  judge_size_curriculum.sh
scripts/configs/data_provider/: combined.sh  inferred_question.sh  replay_buffer.sh  rubric.sh
scripts/configs/inference_engine/: qwen3_8b.sh
scripts/eval/: EVAL_SCRIPT_USAGE.md  eval_judgebench.sh  eval_parallel_by_task_by_step.sh  eval_rewardbench2.sh  extract_rubrics.py  faster_oe_eval_mmlu.sh  launch_sharded_eval.sh  merge_eval_shards.py  merge_livecodebench_shards.py  merge_rb2_shards.py  oe-eval.sh  qualitative_eval.py  rejudge_jb_prompt_ablation.py  rubric_aggregate_stats.py  run_olmes_on_checkpoints.py
tests/: test_baseline_launchers.py  test_multi_judge.py  test_rar_scorer_routing.py  test_rar_training_routing.py  test_rlcer_evolving.py  test_rrd_group_scoring.py
(+52 files in other folders)
