[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai2-olmes"
dynamic = ["version"]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
authors = [
    {name = "Allen Institute for Artificial Intelligence", email = "contact@allenai.org"}
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "omegaconf==2.4.0.dev3", # Workaround for parse_latex in minerva_math to work
    "antlr4-python3-runtime==4.11", # Workaround for parse_latex in minerva_math to work
    "numpy<2", # Workaround for warning messages about compiled modules
    "datasets>=3,<4", # Dataset version 4 does not support trust_remote_code=True
    "transformers>=4.57.0,<5",
    "ai2-olmo-core[torchao]>=2.2", # For olmo-core native evaluation
    "lm_eval==0.4.3", # Pin this to review changes, but will try to update to latest version
    "torch>=2.8.0,<2.9", # Pinned for vLLM 0.11.0
    "ai2-olmo @ git+https://github.com/allenai/OLMo.git@main", # need latest main for torch>=2.4
    "olmes-docker @ git+https://github.com/allenai/olmes-docker.git@main",
    "einops", # To run MPT models
    "pygsheets",
    "bitsandbytes; platform_machine == 'x86_64'", # For running quantized models
    "fsspec==2023.5.0", # Hack to avoid issues with dataset loading (e.g., boolq)
    "boto3", # For downloading from S3
    "langdetect", # For IFEval
    "immutabledict", # For IFEval
    "smart-open", # Allows saving to remote locations
    "wandb", # For logging
    "alpaca_eval @ git+https://github.com/tatsu-lab/alpaca_eval.git@cd543a149df89434d8a54582c0151c0b945c3d20",
    "litellm", # For LLM judges
    "tenacity",
    "tree-sitter==0.25.0",
    "tree-sitter-python",
    "gradio-client",
    "statsmodels",
    "pytrec_eval", # For HELMET
    "cloudpickle",
    "spacy>3.8,<4", # For IFEval OOD; bumping after talking w @ValentinaPy to allow compilation on M series macs
    "emoji", # For IFEval OOD
    "syllapy", # For IFEval OOD
    "pymysql",
    "parameterized",
    "pytest",
    "nltk==3.8.1",
]
license = {file = "LICENSE"}

[project.scripts]
olmes = "oe_eval.launch:main"

[project.urls]
Homepage = "https://github.com/allenai/olmes"
Repository = "https://github.com/allenai/olmes"

[project.optional-dependencies]
spacy = ["en-core-web-sm"]
gpu = [
    "vllm==0.11.0",
    "xformers"
]

[dependency-groups]
dev = [
    "ruff",
    "mypy>=1.0,<1.5",
    "black>=23.0",
    "isort>=5.12,<5.13",
    "pytest",
    "pytest-sphinx",
    "pytest-cov",
    "twine>=1.11.0",
    "build",
    "setuptools",
    "wheel",
    "Sphinx>=4.3.0,<7.1.0",
    "furo==2023.7.26",
    "myst-parser>=1.0,<2.1",
    "sphinx-copybutton==0.5.2",
    "sphinx-autobuild==2021.3.14",
    "sphinx-autodoc-typehints==1.23.3",
    "packaging",
    "types-pyyaml>=6.0.12.20250516",
    "types-requests>=2.32.4.20250611",
    "parameterized",
]
gpu = [
    "vllm==0.11.0",
    "xformers",
]

# Pytorch related setup - https://docs.astral.sh/uv/guides/integration/pytorch/#using-a-pytorch-index
[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.setuptools.packages.find]
exclude = [
    "*.tests",
    "*.tests.*",
    "tests.*",
    "tests",
    "docs*",
    "scripts*"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
olmes = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "oe_eval.version.VERSION"}

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
(
      __pycache__
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
    | ^/examples
    | ^/experiments
    | ^/oe_eval/dependencies
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
skip_glob = ["examples/*", "experiments/*", "oe_eval/dependencies/*"]
known_first_party = ["oe_eval"]

# You can override these pyright settings by adding a personal pyrightconfig.json file.
[tool.pyright]
reportPrivateImportUsage = false

[tool.ruff]
line-length = 115
target-version = "py39"
extend-exclude = ["examples/", "experiments/", "oe_eval/dependencies/"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
ignore_missing_imports = true
no_site_packages = true
check_untyped_defs = true
exclude = [
    "^examples",
    "^experiments",
    "^scripts",
    "^.venv"
]

[[tool.mypy.overrides]]
module = "tests.*"
strict_optional = false

[[tool.mypy.overrides]]
module = "oe_eval.dependencies.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "oe_eval.metrics.code_evals.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "scripts.*",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = [
    "tests/",
]
python_classes = [
  "Test*",
  "*Test"
]
log_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
log_level = "DEBUG"
